get all user can be filter by role and swaggerUI for this api
